pruefungsunterlagen/test2/counter_kand/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend-deployment
  labels:
    app: counter-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/modul-i-ch-109/kube_solution/counter_backend:latest
          ports:
            - containerPort: 8080
