pruefungsunterlagen/test2/counter_kand/kubernetes/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend-deployment
  labels:
    app: counter-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
      labels:
        app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/modul-i-ch-109/kube_solution/counter_frontend
          ports:
            - containerPort: 3000
