pruefungsunterlagen/test2/counter_kand/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
