pruefungsunterlagen/test2/counter_kand/kubernetes/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-database
spec:
  selector:
    app: counter-database
  ports:
    - port: 5432
      targetPort: 5432
