pruefungsunterlagen/test2/counter_kand/kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
