pruefungsunterlagen/test2/counter_kand/kubernetes/frontend-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: counter-frontend
  name: counter-frontend-route

spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: counter-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
